transformed and merge rating data

--- a/wiki_movies.ipynb
+++ b/wiki_movies.ipynb
@@ -2913,7 +2913,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "ba237467",
+   "id": "25e5eb51",
    "metadata": {},
    "outputs": [
     {
@@ -3019,7 +3019,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "94c59f23",
+   "id": "a81ea8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3072,7 +3072,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "3a9e2100",
+   "id": "3e5dad4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3082,7 +3082,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "2f5a533e",
+   "id": "dc08b5ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "8ae34ecf",
+   "id": "87dc3229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ed26029f",
+   "id": "87cc3111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3112,7 +3112,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "6d160b68",
+   "id": "a6d75d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3122,7 +3122,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "45d963f3",
+   "id": "8951d973",
    "metadata": {},
    "outputs": [
     {
@@ -3156,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "fb6b7ed5",
+   "id": "7f0598aa",
    "metadata": {},
    "outputs": [
     {
@@ -3197,7 +3197,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "c22d460b",
+   "id": "8b1f6188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3207,7 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "27656e23",
+   "id": "127e7664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3217,7 +3217,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "f8a00d54",
+   "id": "00958356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3227,7 +3227,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "1e096608",
+   "id": "d23e4e3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3240,7 +3240,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "525ee7bf",
+   "id": "54e8de8a",
    "metadata": {},
    "outputs": [
     {
@@ -3346,7 +3346,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "84510897",
+   "id": "872ca66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3356,7 +3356,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "123149d7",
+   "id": "f046d06a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3366,7 +3366,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "0dee051b",
+   "id": "3fab9fe1",
    "metadata": {},
    "outputs": [
     {
@@ -3387,7 +3387,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "6ac8dbf9",
+   "id": "79ccaf98",
    "metadata": {},
    "outputs": [
     {
@@ -3419,7 +3419,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "e9496d79",
+   "id": "47e928b5",
    "metadata": {},
    "outputs": [
     {
@@ -3440,7 +3440,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "71015c31",
+   "id": "2b932fdf",
    "metadata": {},
    "outputs": [
     {
@@ -3478,7 +3478,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "7c815251",
+   "id": "1305c8e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3488,7 +3488,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "0f0ac072",
+   "id": "9806bca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3498,7 +3498,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "9fba95a7",
+   "id": "2a31f593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3508,7 +3508,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "a1f346d7",
+   "id": "fb49f97b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d1cf691b",
+   "id": "4b4a1ac4",
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3563,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "319d03dd",
+   "id": "4b0bc6e0",
    "metadata": {},
    "outputs": [
     {
@@ -3589,7 +3589,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "4cbaf71a",
+   "id": "62ebd767",
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "a9374052",
+   "id": "d605ae4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3775,7 +3775,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "9f641c32",
+   "id": "d248e5bf",
    "metadata": {},
    "outputs": [
     {
@@ -3798,7 +3798,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "f3bcd1bb",
+   "id": "b9a21a8d",
    "metadata": {},
    "outputs": [
     {
@@ -3830,7 +3830,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "371285f4",
+   "id": "f360631c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3840,7 +3840,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "b9de83b5",
+   "id": "8477416e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "a60492b9",
+   "id": "d8f4498e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3862,7 +3862,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "30c76d32",
+   "id": "60e7ff1f",
    "metadata": {},
    "outputs": [
     {
@@ -3898,7 +3898,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "c98a1939",
+   "id": "6a2ac95d",
    "metadata": {},
    "outputs": [
     {
@@ -3930,7 +3930,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "d715ac31",
+   "id": "c0e71bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3940,7 +3940,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "cb74274b",
+   "id": "c83a7d4e",
    "metadata": {},
    "outputs": [
     {
@@ -3983,7 +3983,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "9cd38a75",
+   "id": "86905b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3993,7 +3993,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "978259ad",
+   "id": "d7b24b70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4012,7 +4012,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "4aa6b247",
+   "id": "8eb29bd5",
    "metadata": {},
    "outputs": [
     {
@@ -4130,7 +4130,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "3ac717ef",
+   "id": "38dfd679",
    "metadata": {},
    "outputs": [
     {
@@ -4261,7 +4261,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "539d44ae",
+   "id": "d70e2953",
    "metadata": {},
    "outputs": [
     {
@@ -4335,7 +4335,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "60900ae8",
+   "id": "371cb14a",
    "metadata": {},
    "outputs": [
     {
@@ -4368,7 +4368,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "31153329",
+   "id": "ab40efd9",
    "metadata": {},
    "outputs": [
     {
@@ -4401,7 +4401,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "0ec07b64",
+   "id": "db172bc7",
    "metadata": {},
    "outputs": [
     {
@@ -4434,7 +4434,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "24835029",
+   "id": "d8b4ef50",
    "metadata": {},
    "outputs": [
     {
@@ -4467,7 +4467,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "8e4b86fa",
+   "id": "ce1d8407",
    "metadata": {},
    "outputs": [
     {
@@ -4500,7 +4500,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "301912d2",
+   "id": "85c6691a",
    "metadata": {},
    "outputs": [
     {
@@ -4617,7 +4617,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "cb0d437d",
+   "id": "68bdc7e5",
    "metadata": {},
    "outputs": [
     {
@@ -4638,7 +4638,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "6acb75cc",
+   "id": "c3874d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4648,7 +4648,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "38689e82",
+   "id": "ec8ae085",
    "metadata": {},
    "outputs": [
     {
@@ -5111,7 +5111,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "a37afd3b",
+   "id": "61e2e6f4",
    "metadata": {},
    "outputs": [
     {
@@ -5164,7 +5164,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "50a0ffcd",
+   "id": "9066f5a6",
    "metadata": {},
    "outputs": [
     {
@@ -5196,7 +5196,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "faa58f89",
+   "id": "47d4d7c4",
    "metadata": {},
    "outputs": [
     {
@@ -5235,7 +5235,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "7fad55e9",
+   "id": "c8a80f2b",
    "metadata": {},
    "outputs": [
     {
@@ -5366,7 +5366,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "1f597e0f",
+   "id": "3ffac849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5376,7 +5376,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "0b65f735",
+   "id": "cf4e93f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5390,7 +5390,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "abbac414",
+   "id": "80961852",
    "metadata": {},
    "outputs": [
     {
@@ -5882,7 +5882,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "60c6267f",
+   "id": "ff08fba7",
    "metadata": {},
    "outputs": [
     {
@@ -5905,7 +5905,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "601293ca",
+   "id": "7ab340b6",
    "metadata": {},
    "outputs": [
     {
@@ -5927,7 +5927,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "f020b1be",
+   "id": "cf2326f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5942,7 +5942,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "8355cb1d",
+   "id": "c433a66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5966,8 +5966,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 168,
+   "id": "06a1cfa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "e9cb38ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "db1e58c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "b0ece445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "b7054169",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "4c519bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e7b44885",
+   "id": "30fa5bec",
    "metadata": {},
    "outputs": [],
    "source": []
