--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -109,7 +109,7 @@
     "        wiki_movies_df['imdb_id'] = wiki_movies_df['imdb_link'].str.extract(r'(tt\\d{7})')\n",
     "        wiki_movies_df.drop_duplicates(subset='imdb_id', inplace=True)\n",
     "    except Exception as e: \n",
-    "        print('E')\n",
+    "        print(e)\n",
     "        \n",
     "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
     "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
